--- a/phinajs/index.html
+++ b/phinajs/index.html
@@ -20,15 +20,10 @@
 
 
   <body>
-  <h2 id="score"  style=" text-align: center;
-                background: black;
-                color: whitesmoke;">0</h2>
-  <section id="game_display">
-    <canvas id="display"></canvas>
-  </section>
 
-  <!-- メイン処理 -->
-  <script src='game.js'></script>
+  <section id="game_display"></section>
+  <canvas id="display"></canvas>
+
   </body>
 
 
